<resources>

    <string name="recipes">Recipes!</string>
    <string name="app_name">My recipes</string>
    <string name="create_recipe">Create Recipe</string>
    <string name="recipe_creation">Recipe creation</string>
    <string name="category_selection">Сategory selection</string>
    <string name="сreating_a_step">Creating a step</string>
    <string name="title_recipe">Title</string>
    <string name="filter_category_European">European</string>
    <string name="filter_category_Asian">Asian</string>
    <string name="filter_category_Pan_Asian">Pan-Asian</string>
    <string name="filter_category_Eastern">Eastern</string>
    <string name="filter_category_American">American</string>
    <string name="filter_category_Russian">Russian</string>
    <string name="filter_category_Mediterranean">Mediterranean</string>
    <string name="category">Categories</string>
    <string name="categoryCaption">Categories:</string>
    <string name="cooking">Cooking</string>
    <string name="step">Step</string>
    <string name="add_stage">Add stage</string>
    <string name="options">Options</string>
    <string name="photo">photo</string>
    <string name="title">Title</string>
    <string name="remove">Remove</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="search">Search</string>
    <string name="filters">Filters</string>
    <string name="home">Home</string>
    <string name="all">All</string>
    <string name="favorites">Favorites</string>
    <string name="list_empty">list is empty</string>
    <string name="description_recipe_like" />
    <string name="menu_stage">Menu stage</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="stage">Stage</string>
    <string name="save_stage">Save stage</string>
    <string name="description_recipe_menu">Recipe menu</string>
    <string name="edit">Edit</string>
    <string name="no_caption_create_recipe">Fill in the title field</string>
    <string name="no_stage_create_recipe">Сreate at least one step</string>
    <string name="no_category_create_recipe">Please select at least one category</string>
    <string name="category_european">European</string>
    <string name="category_asian">Asian</string>
    <string name="category_pan_asian">PanAsian</string>
    <string name="category_eastern">Eastern</string>
    <string name="category_american">American</string>
    <string name="category_russian">Russian</string>
    <string name="category_mediterranean">Mediterranean</string>
    <string name="recipe_view">Recipe View</string>

</resources>