<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/feedFragment3"
        android:title="@string/home"
        android:icon="@drawable/ic_home_24dp"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"/>

    <item
        android:id="@+id/filterFragmentSwitch"
        android:title="@string/category"
        android:icon="@drawable/ic_filter_24dp"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"/>

    <item
        android:id="@+id/favoriteFragment"
        android:title="@string/favorites"
        android:icon="@drawable/ic_favorite_24dp"
        app:showAsAction="ifRoom"
        android:orderInCategory="3"/>

</menu>