<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    app:cardBackgroundColor="@color/yellow"
    app:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="6dp"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@id/authorName"
            app:layout_constraintEnd_toStartOf="@id/menuButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Title"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/authorName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="6dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/categoryTextViewCaption"
            app:layout_constraintEnd_toStartOf="@id/menuButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            tools:text="Author" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/categoryTextViewCaption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="6dp"
            android:text="@string/categoryCaption"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/categoryTextViewContent"
            app:layout_constraintEnd_toStartOf="@id/menuButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/authorName" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/categoryTextViewContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="18dp"
            android:paddingEnd="6dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/menuButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/categoryTextViewCaption"
            tools:text="Русская \nАмериканская \nСредиземноморская" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menuButton"
            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/description_recipe_menu"
            app:icon="@drawable/ic_option_24dp"
            app:layout_constraintBottom_toTopOf="@id/likeButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/likeButton"
            style="@style/Widget.AppTheme.LikeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:checkable="true"
            android:contentDescription="@string/description_recipe_like"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/menuButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>